# PicoDMX

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/res/: PicoDMX.rc
app/src/: dmxframe.cpp  dmxframe.hpp  dmxframe_dataslots_delegate.cpp  dmxframe_dataslots_delegate.hpp  dmxframe_dataslots_model.cpp  dmxframe_dataslots_model.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
app/src/picoscope/: device.hpp  picoscope.cpp  picoscope.hpp
app/src/picoscope/private/: functions.hpp  functions_ps2000a.hpp  functions_ps3000a.hpp  functions_ps4000a.hpp  imports.hpp  lookups.hpp  picosdk.hpp  unit.cpp  unit.hpp
cmake/: gitversion.cmake  mscv_pdb.cmake  picosdk.cmake
hardware/: PicoDMX Line Driver - BOM.xlsx  PicoDMX Line Driver - PickAndPlace.xlsx  PicoDMX Line Driver.FCStd  PicoDMX Line Driver.eprj
